clang-tidy: Fix unnecessary parameter copies in ParallelHelperPool.cpp <https://webkit.org/b/192666> <rdar://problem/46697952>

Reviewed by Alex Christensen.

* wtf/ParallelHelperPool.cpp:
(WTF::ParallelHelperClient::ParallelHelperClient): Use rvalue
reference and WTFMove().
(WTF::ParallelHelperClient::setTask): Ditto.
(WTF::ParallelHelperClient::runTaskInParallel): Ditto.
(WTF::ParallelHelperClient::runTask): Use const reference.
* wtf/ParallelHelperPool.h: Update declarations to match
implementations.


Canonical link: https://commits.webkit.org/207250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239177 268f45cc-cd09-0410-ab3c-d52691b4dbfc